sfdx-source/nca-watrs/main/objects/NCA_Time__c/NCA_Time__c.object-meta.xml
<CustomObject>
    <label>NCA Time</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Excluded Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCA Time</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>