sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Approved_Leave_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Leave_Submission_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Approved Leave Submission Date</label>
    <type>Date</type>
</CustomField>