sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Times</relationshipLabel>
    <relationshipName>NCA_Times</relationshipName>
    <type>Lookup</type>
</CustomField>