sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/IT_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_Number__c</fullName>
    <label>IT Ticket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>