sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Lunch_Taken__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunch Taken</label>
    <type>Checkbox</type>
</CustomField>