sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/NCA_WATRS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>NCA_WATRS_Contact__c</referenceTo>
    <relationshipLabel>NCA Time</relationshipLabel>
    <relationshipName>NCA_Time</relationshipName>
    <type>Lookup</type>
</CustomField>