sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Non_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Processing_Time__c</fullName>
    <label>Non-Processing Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Union</fullName>
            </value>
            <value>
                <fullName>IT Issues (IT Ticket Number Required)</fullName>
            </value>
            <value>
                <fullName>Training (Ability to upload Training Certificate)</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>