sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <formula>OR(
 ISPICKVAL( Premium_Pay_Status__c , &quot;Cancelled&quot;),
 ISPICKVAL( Premium_Pay_Status__c , &quot;Site Supervisor Approved&quot;),
 ISPICKVAL( Premium_Pay_Status__c , &quot;TL Approved&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>