sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCA Times</relationshipLabel>
    <relationshipName>NCA_Times</relationshipName>
    <type>Lookup</type>
</CustomField>