sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>