sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>