sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Supervisor_of_MPS_Appeals__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_of_MPS_Appeals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor of MPS/Appeals</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Times1</relationshipName>
    <type>Lookup</type>
</CustomField>