sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Times3</relationshipName>
    <type>Lookup</type>
</CustomField>