sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Timekeeper__c.field-meta.xml
<CustomField>
    <fullName>Timekeeper__c</fullName>
    <label>Timekeeper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>