sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Total_Hours_Taken__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Taken__c</fullName>
    <label>Total Hours Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>