sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Total_Leave_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave_Hours__c</fullName>
    <label>Total Leave Hours</label>
    <length>30</length>
    <type>Text</type>
</CustomField>