sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Total_Premium_Pay_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Pay_Hours__c</fullName>
    <label>Total Premium Pay Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>