sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Training_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Training_Certificate_Number__c</fullName>
    <label>Training Certificate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>