sfdx-source/nca-watrs/main/objects/NCA_Time__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OS - Overtime Scheduled</fullName>
            </value>
            <value>
                <fullName>OU - Overtime Unscheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>