sfdx-source/nca-watrs/main/objects/NCA_Time__c/recordTypes/Leave_Time.recordType-meta.xml
<RecordType>
    <fullName>Leave_Time</fullName>
    <active>true</active>
    <label>Leave Time</label>
</RecordType>