sfdx-source/nca-watrs/main/objects/NCA_Time__c/recordTypes/Non_Processing_Time.recordType-meta.xml
<RecordType>
    <fullName>Non_Processing_Time</fullName>
    <active>true</active>
    <label>Non-Processing Time</label>
</RecordType>