sfdx-source/nca-watrs/main/objects/NCA_Time__c/recordTypes/Premium_Time.recordType-meta.xml
<RecordType>
    <fullName>Premium_Time</fullName>
    <active>true</active>
    <label>Premium Time</label>
</RecordType>