sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/Add_Comment_For_Other_NonprocessingTime.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Comment_For_Other_NonprocessingTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;Non-Processing Time&apos;  , ISPICKVAL( Leave_Type__c , &quot;Other&quot;) , 
 ISBLANK( Comments__c )    )</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Must include Additional Comments to complete Time Request of this type.</errorMessage>
</ValidationRule>