sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/Check_User_Edit_Post_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_User_Edit_Post_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>( $User.Id!= Team_Leader__r.Id
&amp;&amp;
$User.Id!= Site_Supervisor__r.Id )
&amp;&amp;
( TEXT(Premium_Pay_Status__c) = &quot;Site Supervisor Approved&quot;
 ||
TEXT(Premium_Pay_Status__c) =&quot;TL Approved&quot;
 ||
TEXT(Premium_Pay_Status__c) =&quot;Cancelled&quot;)</errorConditionFormula>
    <errorMessage>This Record is already Approved. Only a assigned managers can Edit this record.</errorMessage>
</ValidationRule>