sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/Comment_For_a_Cancelled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_For_a_Cancelled_Status</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  AND (ISBLANK(Comments__c), 
 ISPICKVAL(Premium_Pay_Status__c,&apos;Cancelled&apos; )) , true, false)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>A Comment is needed when Canceling a Time</errorMessage>
</ValidationRule>