sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/NCA_comment_on_nonprocessingtime_IT.validationRule-meta.xml
<ValidationRule>
    <fullName>NCA_comment_on_nonprocessingtime_IT</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Non_Processing_Time__c ,&quot;IT Issues (IT Ticket Number Required)&quot;)
&amp;&amp;
(ISBLANK( Comments__c )
&amp;&amp;
ISBLANK(  IT_Ticket_Number__c ))</errorConditionFormula>
    <errorDisplayField>Non_Processing_Time__c</errorDisplayField>
    <errorMessage>Please enter in an IT Ticket Number or additional comment.</errorMessage>
</ValidationRule>