sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/NCA_comment_on_nonprocessingtime_other.validationRule-meta.xml
<ValidationRule>
    <fullName>NCA_comment_on_nonprocessingtime_other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Non_Processing_Time__c ,&quot;Other&quot;), ISBLANK( Comments__c ) )</errorConditionFormula>
    <errorDisplayField>Non_Processing_Time__c</errorDisplayField>
    <errorMessage>Must include Additional Comments to complete Time Request of this type.</errorMessage>
</ValidationRule>