sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/NCA_NoChangeonClosedTime.validationRule-meta.xml
<ValidationRule>
    <fullName>NCA_NoChangeonClosedTime</fullName>
    <active>false</active>
    <errorConditionFormula>(TEXT(PRIORVALUE( Premium_Pay_Status__c )) = &quot;Cancelled&quot;
||
TEXT(PRIORVALUE( Premium_Pay_Status__c )) = &quot;Site Supervisor Approved&quot;
||
TEXT(PRIORVALUE( Premium_Pay_Status__c )) = &quot;TL Approved&quot;
||
TEXT(PRIORVALUE( Premium_Pay_Status__c )) = &quot;Denied&quot;)
&amp;&amp;
Bypass_Automation__c = false</errorConditionFormula>
    <errorMessage>The record is locked and no fields can be changed.</errorMessage>
</ValidationRule>