sfdx-source/nca-watrs/main/objects/NCA_Time__c/validationRules/NCA_Time_RestrictCancelRequests.validationRule-meta.xml
<ValidationRule>
    <fullName>NCA_Time_RestrictCancelRequests</fullName>
    <active>false</active>
    <description>Only the related user can cancel a time request.</description>
    <errorConditionFormula>$User.Id != Owner:User.Id 
&amp;&amp;
TEXT( Premium_Pay_Status__c ) = &quot;Cancelled&quot;</errorConditionFormula>
    <errorDisplayField>Premium_Pay_Status__c</errorDisplayField>
    <errorMessage>Time request can only be cancelled by the related employee.</errorMessage>
</ValidationRule>