sfdx-source/nca-watrs/main/objects/NCA_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>NCA_WATRS_Contact__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Premium_Pay_Status__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    
</ListView>