sfdx-source/nca-watrs/main/objects/NCA_Time__c/listViews/Approval_Request_Queue_NCA_Time.listView-meta.xml
<ListView>
    <fullName>Approval_Request_Queue_NCA_Time</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Employee__c</columns>
    <columns>Total_Hours_Taken__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Pending__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Time Approval Requests</label>

</ListView>