sfdx-source/nca-watrs/main/objects/NCA_Time__c/listViews/NCA_Leavenworth_Approval_Queue.listView-meta.xml
<ListView>
    <fullName>NCA_Leavenworth_Approval_Queue</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Total_Hours_Taken__c</columns>
    <columns>Non_Processing_Time__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Premium_Pay_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Site_Location__c</field>
        <operation>equals</operation>
        <value>Leavenworth</value>
    </filters>
    <label>NCA Leavenworth Approval Queue</label>
    <sharedTo>
        <group>NCA_Leavenworth_Share_Read_Write</group>
    </sharedTo>
</ListView>